Increased MaxPermSize for Surefire plugin.
git-svn-id: svn://svn.forge.objectweb.org/svnroot/sat4j/maven/trunk@2559 ba638df5-4473-46d1-82f8-c3ae2a17a6e1